--- a/template.ipynb
+++ b/template.ipynb
@@ -27,6 +27,7 @@
     "from pathlib import Path\n",
     "\n",
     "import plotly.express as px\n",
+    "import matplotlib.pyplot as plt\n",
     "pd.options.plotting.backend = 'plotly'\n",
     "\n",
     "# from dsc80_utils import * # Feel free to uncomment and use this."
@@ -40,28 +41,6 @@
    "source": [
     "lol_fp = Path('data') / '2025_lol_data.csv'\n",
     "matches = pd.read_csv(lol_fp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#matches[['gameid', 'position', 'playername', 'playerid', 'teamname', 'teamid', 'participantid', 'result']].head(24)\n",
-    "\n",
-    "temp = matches[['gameid','gamelength','golddiffat10']]\n",
-    "temp[temp['golddiffat10'].isna()]\n",
-    "#temp[temp['gamelength'] <= 1500]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#matches[['firstdragon','elementaldrakes', 'opp_elementaldrakes', 'infernals', 'mountains', 'chemtechs', 'hextechs', 'oceans', 'clouds', 'hextechs', 'dragons (type unknown)']]"
    ]
   },
   {
@@ -117,9 +96,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "matches"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -132,13 +109,28 @@
     "# gold_differences = matches[sorted(gold_dif_vs_win_percentage)]\n",
     "# gold_columns = [col for col in gold_differences.columns if col.startswith('golddiffat')]\n",
     "\n",
+    "#BELOW IS THE ONE I WAS USING PREVIOUSLY\n",
     "cleaned = matches.copy(deep=False)\n",
     "gold_info = matches.columns[matches.columns.str.contains('gold')]\n",
     "gold_df = matches[gold_info]\n",
     "#cleaned = cleaned.set_index(['gameid','gameid', 'league','side']).loc['11715-11715_game_1'][gold_info]\n",
     "cleaned = cleaned.set_index(['gameid', 'league','side'])[gold_info]\n",
     "cleaned = cleaned.reset_index()\n",
-    "cleaned\n"
+    "cleaned\n",
+    "\n",
+    "# cols = [\n",
+    "#     \"league\", \"side\",\n",
+    "#     \"goldat10\", \"goldat15\", \"goldat20\", \"goldat25\",\n",
+    "#     \"golddiffat10\", \"golddiffat15\", \"golddiffat20\", \"golddiffat25\",\n",
+    "#     \"firstdragon\",\n",
+    "#     \"elementaldrakes\", \"opp_elementaldrakes\",\n",
+    "#     \"dragons\", \"opp_dragons\",\n",
+    "#     \"result\"\n",
+    "# ]\n",
+    "# cleaned = matches.copy(deep=False)\n",
+    "# cleaned = cleaned[cols]\n",
+    "# cleaned['']\n",
+    "# cleaned"
    ]
   },
   {
@@ -223,16 +215,13 @@
    "outputs": [],
    "source": [
     "cleaned['golddiffat10_missing'] = cleaned['golddiffat10'].isna()\n",
-    "#cleaned\n",
-    "\n",
     "league_gold10_prop = (\n",
     "    cleaned\n",
-    "    .groupby(['golddiffat10_missing', 'league'])\n",
+    "    .groupby(['league', 'golddiffat10_missing'])\n",
     "    .size()\n",
     "    .reset_index(name='count')\n",
-    "    .groupby('golddiffat10_missing')\n",
-    "    .apply(lambda x: x.assign(proportion=x['count'] / x['count'].sum()))\n",
-    "    .reset_index(drop=True)\n",
+    "    .groupby('golddiffat10_missing', group_keys=False)\n",
+    "    .apply(lambda g: g.assign(proportion=g['count'] / g['count'].sum()))\n",
     ")\n",
     "fig = px.bar(\n",
     "    league_gold10_prop,\n",
@@ -241,16 +230,16 @@
     "    color='golddiffat10_missing',\n",
     "    barmode='group',\n",
     "    orientation='h',\n",
-    "    labels={'golddiffat10_missing': 'Gold Difference at 10 Minutes - Missing'}\n",
+    "    labels={'golddiffat10_missing': 'golddiffat10 is missing'}\n",
     ")\n",
     "fig.update_layout(\n",
-    "    title='League by Gold Difference at 10 Minutes Missingness',\n",
+    "    title='Proportion of Leagues by Missingness of golddiffat10',\n",
     "    xaxis_title='Proportion',\n",
     "    yaxis_title='League',\n",
-    "    width=900,\n",
-    "    height=500\n",
+    "    height=900,\n",
+    "    width=900\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n"
    ]
   },
   {
@@ -260,38 +249,7 @@
    "outputs": [],
    "source": [
     "def tvd(p, q):\n",
-    "    return 0.5 * np.abs(p - q).sum()\n",
-    "obs = league_gold10_prop.pivot(\n",
-    "    index='league',\n",
-    "    columns='golddiffat10_missing',\n",
-    "    values='proportion'\n",
-    ")\n",
-    "observed_stat = tvd(obs[False], obs[True])\n",
-    "\n",
-    "stats = []\n",
-    "for i in range(100):\n",
-    "    shuffled = cleaned.assign(\n",
-    "        golddiffat10_missing=np.random.permutation(cleaned['golddiffat10_missing'])\n",
-    "    )\n",
-    "    temp = (\n",
-    "        shuffled\n",
-    "        .groupby(['golddiffat10_missing', 'league'])\n",
-    "        .size()\n",
-    "        .reset_index(name='count')\n",
-    "    )\n",
-    "    temp['proportion'] = (\n",
-    "        temp.groupby('golddiffat10_missing')['count']\n",
-    "           .transform(lambda x: x / x.sum())\n",
-    "    )\n",
-    "    temp_pivot = temp.pivot(\n",
-    "        index='league',\n",
-    "        columns='golddiffat10_missing',\n",
-    "        values='proportion'\n",
-    "    )\n",
-    "    stat = tvd(temp_pivot[False], temp_pivot[True])\n",
-    "    stats.append(stat)\n",
-    "p_value = (np.array(stats) >= observed_stat).mean()\n",
-    "p_value"
+    "    return 0.5 * np.abs(p - q).sum()"
    ]
   },
   {
@@ -300,7 +258,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tvd(obs[False], obs[True])"
+    "obs = league_gold10_prop.pivot(\n",
+    "    index='league',\n",
+    "    columns='golddiffat10_missing',\n",
+    "    values='proportion'\n",
+    ").fillna(0)\n",
+    "observed_stat = tvd(obs[False], obs[True])\n",
+    "stats = []\n",
+    "for i in range(1000):\n",
+    "    shuffled = cleaned.copy()\n",
+    "    shuffled['golddiffat10_missing'] = np.random.permutation(cleaned['golddiffat10_missing'])\n",
+    "    temp = (\n",
+    "        shuffled\n",
+    "        .groupby(['golddiffat10_missing', 'league'])\n",
+    "        .size()\n",
+    "        .reset_index(name='count')\n",
+    "    )\n",
+    "    temp['proportion'] = (\n",
+    "        temp.groupby('golddiffat10_missing')['count']\n",
+    "        .transform(lambda x: x / x.sum())\n",
+    "    )\n",
+    "    temp_pivot = temp.pivot(\n",
+    "        index='league',\n",
+    "        columns='golddiffat10_missing',\n",
+    "        values='proportion'\n",
+    "    ).fillna(0)\n",
+    "    stat = tvd(temp_pivot[False], temp_pivot[True])\n",
+    "    stats.append(stat)\n",
+    "p_value = (np.array(stats) >= observed_stat).mean()\n",
+    "print(p_value, np.mean(stats))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observed_stat"
    ]
   },
   {
@@ -326,32 +321,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "league_gold10_prop2 = (\n",
+    "cleaned['golddiffat10_missing'] = cleaned['golddiffat10'].isna()\n",
+    "side_gold10_prop = (\n",
     "    cleaned\n",
-    "    .groupby(['golddiffat10_missing', 'side'])\n",
+    "    .groupby(['side', 'golddiffat10_missing'])\n",
     "    .size()\n",
     "    .reset_index(name='count')\n",
-    "    .groupby('golddiffat10_missing')\n",
-    "    .apply(lambda x: x.assign(proportion=x['count'] / x['count'].sum()))\n",
-    "    .reset_index(drop=True)\n",
+    "    .groupby('golddiffat10_missing', group_keys=False)\n",
+    "    .apply(lambda g: g.assign(proportion=g['count'] / g['count'].sum()))\n",
     ")\n",
     "fig = px.bar(\n",
-    "    league_gold10_prop2,\n",
+    "    side_gold10_prop,\n",
     "    x='proportion',\n",
     "    y='side',\n",
     "    color='golddiffat10_missing',\n",
     "    barmode='group',\n",
     "    orientation='h',\n",
-    "    labels={'golddiffat10_missing': 'Gold Difference at 10 Minutes - Missing'}\n",
+    "    labels={'golddiffat10_missing': 'golddiffat10 is missing'}\n",
     ")\n",
     "fig.update_layout(\n",
-    "    title='League by Gold Difference at 10 Minutes Missingness',\n",
+    "    title='Proportion of Leagues by Missingness of golddiffat10',\n",
     "    xaxis_title='Proportion',\n",
     "    yaxis_title='Side',\n",
-    "    width=900,\n",
-    "    height=500\n",
+    "    height=900,\n",
+    "    width=900\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n"
    ]
   },
   {
@@ -360,36 +355,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = league_gold10_prop2.pivot(\n",
+    "obs2 = side_gold10_prop.pivot(\n",
     "    index='side',\n",
     "    columns='golddiffat10_missing',\n",
     "    values='proportion'\n",
-    ")\n",
-    "observed_stat2 = tvd(obs[False], obs[True])\n",
+    ").fillna(0)\n",
+    "observed_stat2 = tvd(obs2[False], obs2[True])\n",
     "stats2 = []\n",
-    "for i in range(100):\n",
-    "    shuffled = cleaned.assign(\n",
-    "        golddiffat10_missing=np.random.permutation(cleaned['golddiffat10_missing'])\n",
-    "    )\n",
-    "    temp2 = (\n",
+    "for i in range(1000):\n",
+    "    shuffled = cleaned.copy()\n",
+    "    shuffled['golddiffat10_missing'] = np.random.permutation(cleaned['golddiffat10_missing'])\n",
+    "    temp = (\n",
     "        shuffled\n",
     "        .groupby(['golddiffat10_missing', 'side'])\n",
     "        .size()\n",
     "        .reset_index(name='count')\n",
     "    )\n",
-    "    temp2['proportion'] = (\n",
-    "        temp2.groupby('golddiffat10_missing')['count']\n",
-    "           .transform(lambda x: x / x.sum())\n",
+    "    temp['proportion'] = (\n",
+    "        temp.groupby('golddiffat10_missing')['count']\n",
+    "        .transform(lambda x: x / x.sum())\n",
     "    )\n",
-    "    temp_pivot2 = temp2.pivot(\n",
+    "    temp_pivot = temp.pivot(\n",
     "        index='side',\n",
     "        columns='golddiffat10_missing',\n",
     "        values='proportion'\n",
-    "    )\n",
-    "    stat2 = tvd(temp_pivot2[False], temp_pivot2[True])\n",
-    "    stats2.append(stat)\n",
+    "    ).fillna(0)\n",
+    "    stat2 = tvd(temp_pivot[False], temp_pivot[True])\n",
+    "    stats2.append(stat2)\n",
     "p_value2 = (np.array(stats2) >= observed_stat2).mean()\n",
-    "p_value2"
+    "print(p_value2, np.mean(stats2), observed_stat2)"
    ]
   },
   {
@@ -427,24 +421,7 @@
    },
    "outputs": [],
    "source": [
-    "# def permutation_test(df, n_permutations=10000):\n",
-    "#     gold = df['golddiffat10'].values\n",
-    "#     results = df['result'].values\n",
-    "#     winning_gold = df[df['result'] == 1]['golddiffat10']\n",
-    "#     losing_gold = df[df['result'] == 0]['golddiffat10']\n",
-    "#     observed_diff = winning_gold.mean() - losing_gold.mean()\n",
-    "#     permuted_diffs = []\n",
-    "#     for _ in range(n_permutations):\n",
-    "#         shuffled_results = np.random.permutation(results)\n",
-    "#         shuffled_winning = gold[shuffled_results == 'Win']\n",
-    "#         shuffled_losing = gold[shuffled_results == 'Loss']\n",
-    "#         diff = shuffled_winning.mean() - shuffled_losing.mean()\n",
-    "#         permuted_diffs.append(diff)\n",
-    "#     p_value = np.mean(np.array(permuted_diffs) >= observed_diff)\n",
-    "#     return observed_diff, p_value, permuted_diffs\n",
-    "# observed_diff, p_value, permuted_diffs = permutation_test(gold_differences, n_permutations=10000)\n",
-    "# print(f\"Observed difference in means: {observed_diff}\")\n",
-    "# print(f\"P-value: {p_value}\")"
+    "1+1"
    ]
   },
   {
